crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctypea_gt.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPEa >\"####)"
---
[
    Token {
        data: "",
        attrs: Some(
            {
                "!DOCTYPEa ": None,
            },
        ),
        kind: ProcessingInstruction,
        is_implied: false,
    },
]
